5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1679_1100.log
== TEST (2019-04-25 17:27:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("digite o valor: "))
print(a)
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif (a==10):
	print(arara)
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	pritn("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- ERROR:
File "XXXX", line 6
    elif (a==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:28:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("digite o valor: "))
print("Entrada:", a)
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif (a==10):
	print(arara)
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	pritn("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- ERROR:
File "XXXX", line 6
    elif (a==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:29:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("digite o valor: "))
print("Entrada:", a)
if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif (a==10):
	print(arara)
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	pritn("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    pritn("Animal: Garoupa")
NameError: name 'pritn' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:29:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("digite o valor: "))
print("Entrada:", a)
if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif (a==10):
	print(arara)
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	pritn("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.174487
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1100/main.py", line 17, in <module>
    pritn("Animal: Garoupa")
NameError: name 'pritn' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:29:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("digite o valor: "))
print("Entrada:", a)
if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif (a==10):
	print(arara)
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	pritn("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    pritn("Animal: Garoupa")
NameError: name 'pritn' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:29:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("digite o valor: "))
print("Entrada:", a)
if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif (a==10):
	print(arara)
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	pritn("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    pritn("Animal: Garoupa")
NameError: name 'pritn' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:30:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("digite o valor: "))
print("Entrada:", a)
if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif (a==10):
	print(arara)
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	pritn("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.134928
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1100/main.py", line 17, in <module>
    pritn("Animal: Garoupa")
NameError: name 'pritn' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:30:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("digite o valor: "))
print("Entrada:", a)
if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print(arara)
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	pritn("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.122299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1100/main.py", line 17, in <module>
    pritn("Animal: Garoupa")
NameError: name 'pritn' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:30:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("digite o valor: "))
print("Entrada:", a)
if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print(arara)
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	pritn("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    pritn("Animal: Garoupa")
NameError: name 'pritn' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:34:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("digite o valor: "))
print("Entrada: ",a)
if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print(arara)
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	pritn("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    pritn("Animal: Garoupa")
NameError: name 'pritn' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:34:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("digite o valor: "))
print("Entrada: ",a)
if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print(arara)
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	pritn("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.139725
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1100/main.py", line 17, in <module>
    pritn("Animal: Garoupa")
NameError: name 'pritn' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:35:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("digite o valor: "))
print("Entrada: ",a)
if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print(arara)
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.178795
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:25:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("digite o valor: "))
print("Entrada: ",a)
if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print(arara)
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
